# prysm

./: .golangci.yml  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: go.yml
api/client/: client.go
api/client/beacon/: BUILD.bazel  client.go  client_epbs.go
api/grpc/: grpcutils.go  parameters.go
beacon-chain/blockchain/: BUILD.bazel  chain_info.go  chain_info_forkchoice.go  chain_info_test.go  currently_syncing_execution_payload_envelope.go  error.go  execution_engine.go  execution_engine_epbs.go  execution_engine_test.go  forkchoice_update_execution.go  forkchoice_update_execution_test.go  head.go  head_test.go  log.go  options.go  process_attestation.go  process_attestation_test.go  process_block.go  process_block_helpers.go  process_block_test.go  receive_attestation.go  receive_attestation_test.go  receive_block.go  receive_data_column.go  receive_execution_payload_envelope.go  receive_execution_payload_envelope_test.go  service.go  service_test.go  setup_forchoice.go  setup_test.go
beacon-chain/cache/: BUILD.bazel  payload_attestation.go
beacon-chain/core/epbs/: BUILD.bazel  error.go  execution_payload_envelope.go  execution_payload_envelope_test.go  execution_payload_header.go  operations.go  payload_attestation.go  upgrade.go  upgrade_test.go
beacon-chain/das/: BUILD.bazel  availability.go  availability_columns.go  availability_columns_test.go  availability_test.go  cache.go
beacon-chain/execution/: BUILD.bazel  engine_client.go  engine_client_epbs.go  engine_client_test.go  service.go
beacon-chain/forkchoice/: BUILD.bazel  interfaces.go  ro.go  ro_test.go
beacon-chain/node/: BUILD.bazel  node.go
beacon-chain/p2p/: BUILD.bazel  broadcaster.go  broadcaster_test.go  config.go  custody.go  custody_test.go  discovery.go  discovery_test.go  fork_watcher.go  gossip_scoring_params.go  gossip_topic_mappings.go  gossip_topic_mappings_test.go  interfaces.go  pubsub.go  pubsub_filter.go  rpc_topic_mappings.go  topics_epbs.go
beacon-chain/rpc/: BUILD.bazel  endpoints.go  service.go
beacon-chain/state/: interfaces.go
beacon-chain/sync/: BUILD.bazel  blobs_test.go  data_columns.go  data_columns_reconstruct.go  data_columns_sampling.go  data_columns_sampling_test.go  decode_pubsub.go  execution_payload_envelope.go  execution_payload_header.go  fork_watcher_test.go  fuzz_exports.go  inclusion_list.go  options.go  payload_attestations.go  pending_attestations_queue.go  pending_attestations_queue_test.go  pending_blocks_queue.go  pending_payload_queue.go  rate_limiter.go  rpc.go  rpc_beacon_blocks_by_root.go  rpc_blob_sidecars_by_range.go  rpc_blob_sidecars_by_range_test.go  rpc_blob_sidecars_by_root_test.go  rpc_chunked_response.go  rpc_data_column_sidecars_by_range.go  rpc_data_column_sidecars_by_root.go  rpc_execution_payload_envelope.go  rpc_send_request.go  rpc_send_request_test.go  service.go  subscriber.go  subscriber_beacon_blocks.go  subscriber_beacon_blocks_chunks.go  subscriber_beacon_blocks_test.go  sync_fuzz_test.go  validate_aggregate_proof.go  validate_aggregate_proof_test.go  validate_beacon_attestation.go  validate_beacon_attestation_test.go  (+5 more)
beacon-chain/sync/epbs/: BUILD.bazel  pending_queues.go  pending_queues_test.go
beacon-chain/sync/rlnc/: BUILD.bazel  block_chunk_cache.go  block_chunk_cache_test.go  committer.go  message.go  node.go  trusted_setup.go  trusted_setup.json  trusted_setup_test.go
beacon-chain/verification/: BUILD.bazel  blob.go  blob_test.go  epbs.go  execution_payload_envelope.go  execution_payload_envelope_mock.go  execution_payload_envelope_test.go  execution_payload_header.go  initializer_epbs.go  payload_attestation.go
cache/nonblocking/: lru.go  lru_test.go
changelog/: bastin_lightclient-finality-optimistic-ssz.md  dB2510_fixpruner.md  dB2510_precommit.md  james-prysm_attestation-cleanup-suggestions.md  james-prysm_blockv2-cognit.md  james-prysm_cleanup-payload-conversions.md  james-prysm_committee-index-log.md  james-prysm_deprecate-apis-for-electra.md  james-prysm_dynamic-max-blobs.md  james-prysm_fix-builder-post-header.md  james-prysm_fix-electra-committee-log.md  james-prysm_fix-optimistic-check.md  james-prysm_fix-wrong-committee-seen.md  james-prysm_gas-limit-logs.md  james-prysm_improve-execution-request-errors.md  james-prysm_poc-committee-removal.md  james-prysm_remove-old-web3signer-metrics.md  james-prysm_web3signer-electra-e2e.md  kasey_ancestry-queries.md  kasey_repair-idx-on-read.md  kasey_warn-hist-state-rep.md  manu_fix_dependencies_doc.md  manu_remove_fulu_state_block.md  manu_services_start_log_removal.md  manu_tracked_validators_ttl.md  manu_validators_registration_default_batch.md  nisdas_add_deposit_request_testing.md  nisdas_enable_multiclient_e2e_electra.md  nisdas_fix_attester_slashing_validation.md  nisdas_fix_block_decoding.md  nisdas_fix_capabilites.md  nisdas_fix_deposit_active_evaluator.md  nisdas_fix_process_deposit_evaluator.md  nisdas_log_execution_requests.md  nisdas_update_blst.md  potuz_add_target_to_fc_dump.md  potuz_blacklist.md  potuz_fix_forkmaps_log.md  potuz_forkchoice_startup.md  potuz_populate_pubkey.md  (+22 more)
cmd/: flags.go
cmd/beacon-chain/: main.go  usage.go
config/features/: BUILD.bazel  config.go  config_test.go  deprecated_flags.go  flags.go
config/fieldparams/: mainnet.go  minimal.go
config/params/: config.go  config_test.go  interop.go  loader.go  loader_test.go  mainnet_config.go  (+5 more)
proto/: ssz_proto_library.bzl
tools/: ssz.bzl
(+320 files in other folders)
