load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pending_queues.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/sync/epbs",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/engine/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pending_queues_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//proto/engine/v1:go_default_library",
        "//testing/require:go_default_library",
    ],
)
